feat: refatoracao delete e search