@@ -5,13 +5,12 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.test.itau.chavepix.controller.PixKeyController;
 import com.test.itau.chavepix.domain.PixKey;
+import com.test.itau.chavepix.dto.PixKeyDeleteOutDTO;
 import com.test.itau.chavepix.dto.PixKeyQueryDTO;
+import com.test.itau.chavepix.dto.PixQueryOutDTO;
 import com.test.itau.chavepix.mapper.PixKeyMapper;
 import com.test.itau.chavepix.mapper.PixKeyUpdateMapper;
 import com.test.itau.chavepix.model.AccountPixKeysModel;
-import com.test.itau.chavepix.model.KeyTypeModel;
-import com.test.itau.chavepix.model.PersonTypeModel;
-import com.test.itau.chavepix.model.PixKeyModel;
 import com.test.itau.chavepix.persistence.entity.PixKeyEntity;
 import com.test.itau.chavepix.persistence.repository.PixKeyRepository;
 import com.test.itau.chavepix.validation.BusinessValidation;
@@ -23,9 +22,11 @@ import org.springframework.stereotype.Service;
 import java.math.BigInteger;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeFormatterBuilder;
+import java.time.temporal.ChronoField;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -42,105 +43,93 @@ public class PixKeysService {
 
         log.info("Creating pix key: {}", pixKey);
 
-        AccountPixKeysModel accountPixKeys = findByAccountAndAgency(pixKey.getAgencyNumber(), pixKey.getAccountNumber());
+        List<PixKey> pixKeys = findByAccountAndAgency(pixKey.getAgencyNumber(), pixKey.getAccountNumber());
 
-        businessValidation.validatePixKeyNonUnique(pixKeyRepository,pixKey);
-
-        if (Objects.nonNull(accountPixKeys)) {
-            businessValidation.validateIfDocumentAlredyExists(accountPixKeys,pixKey.getKeyType().name());
-            businessValidation.validateIfKeysLimitBeenReached(accountPixKeys);
-            businessValidation.validateIfDocumentIsCorrect(accountPixKeys, pixKey.getPersonType().name());
-        }
+        businessValidation.validatePixKeyNonUnique(pixKey);
+        businessValidation.validatePixKey(pixKeys,pixKey.getPersonType().name());
 
         PixKeyEntity pixKeyEntity = PixKeyMapper.INSTANCE.toPixKeyEntity(pixKey);
-        pixKeyEntity.setDateTimeCreation(LocalDateTime.now(ZoneId.of("America/Sao_Paulo")));
-
         log.info("Saving pix key: {}", pixKey);
 
         return PixKeyMapper.INSTANCE.toPixKey(pixKeyRepository.save(pixKeyEntity)); //new PixKeyOutDTO(pixKeyRepository.save(new PixKeyEntity(pixKey)));
     }
 
-//    public List<PixQueryOutDTO> searchPixKey(PixKeyQueryDTO pixKeyQueryDTO, HttpServletResponse response) {
-//        log.info("Searching pix key: {}", pixKeyQueryDTO);
-//        Map<String,String> map = convertTOMap(pixKeyQueryDTO);
-//        pixKeyQueryValidationHandler.validatePixKeyQuery(map);
-//
-//        List<PixKeyEntity> pixKeys =  pixKeyRepository.findCustom(pixKeyQueryDTO.getId(),pixKeyQueryDTO.getKeyType(),pixKeyQueryDTO.getAgencyNumber(), pixKeyQueryDTO.getAccountNumber(), pixKeyQueryDTO.getAccountHolderName());
-//
-//        if(pixKeys.isEmpty()){
-//            response.setStatus(404);
-//            log.warn("No pix keys found with query: {}", pixKeyQueryDTO);
-//        }
-//        log.info("Searching {} pix keys returned with query: {}",pixKeys.size(),pixKeyQueryDTO);
-//        return  pixKeys.stream()
-//                .map(PixQueryOutDTO::new)
-//                .collect(Collectors.toList());
-//    }
-//
-//
-    public PixKey updatePixKey(PixKey pixKey) {
-        log.info("Updating pix key: {}", pixKey);
+    public List<PixQueryOutDTO> searchPixKey(PixKeyQueryDTO pixKeyQueryDTO) {
+        log.info("Searching pix key: {}", pixKeyQueryDTO);
 
-        PixKeyEntity pixKeyEntity = pixKeyRepository.findById(pixKey.getId()).orElse(null);
+        List<PixKeyEntity> pixKeys =  pixKeyRepository.findCustom(pixKeyQueryDTO.getId(),
+                pixKeyQueryDTO.getParameters().get("tipo_chave"),
+                pixKeyQueryDTO.getParameters().get("numero_agencia"),
+                pixKeyQueryDTO.getParameters().get("numero_conta"),
+                pixKeyQueryDTO.getParameters().get("nome_correntista"),
+                convertToLocalDate(pixKeyQueryDTO.getParameters().get("data_inclusao"),getFormaterStart()),
+                convertToLocalDate(pixKeyQueryDTO.getParameters().get("data_inclusao"),getFormaterEnd()),
+                convertToLocalDate(pixKeyQueryDTO.getParameters().get("data_exclusao"),getFormaterStart()),
+                convertToLocalDate(pixKeyQueryDTO.getParameters().get("data_exclusao"),getFormaterEnd()));
 
-        businessValidation.validateNonNull(pixKeyEntity);
-        businessValidation.validateNonDeleted(pixKeyEntity);
+        log.info("Searching {} pix keys returned with query: {}",pixKeys.size(),pixKeyQueryDTO);
+        return  pixKeys.stream()
+                .map(PixKeyMapper.INSTANCE::toPixQueryOutDTO)
+                .collect(Collectors.toList());
+    }
 
-        AccountPixKeysModel accountPixKeys = findByAccountAndAgency(pixKey.getAgencyNumber(), pixKey.getAccountNumber());
-        if(Objects.nonNull(accountPixKeys)) {
-            businessValidation.validateIfKeysLimitBeenReached(accountPixKeys);
-            businessValidation.validateIfDocumentAlredyExists(accountPixKeys,pixKeyEntity.getKeyTypeEntity().name());
-            businessValidation.validateIfDocumentIsCorrect(accountPixKeys, pixKeyEntity.getPersonTypeEntity().name());
-        }
+
+    public PixKey updatePixKey(PixKey pix) {
+        log.info("Updating pix key: {}", pix);
+
+        PixKeyEntity pixKeyEntity = Optional.of(pixKeyRepository.findByIdAndDateTimeDeleteIsNull(pix.getId())).orElseThrow();
+
+        PixKey pixKey = PixKeyMapper.INSTANCE.toPixKey(pixKeyEntity);
+
+        List<PixKey> pixKeys = findByAccountAndAgency(pixKey.getAgencyNumber(), pixKey.getAccountNumber());
+        businessValidation.validatePixKey(pixKeys,pixKey.getPersonType().name());
 
         PixKeyEntity updatedPixKeyEntity = PixKeyUpdateMapper.INSTANCE.updatePixKeyEntityFromPixKey(pixKeyEntity,pixKey);
         log.info("Pix key updated: {}", pixKey);
         return PixKeyMapper.INSTANCE.toPixKey(pixKeyRepository.save(updatedPixKeyEntity));
-    }
-//
-//    public PixKeyDeleteOutDTO deletePixKey(UUID id) {
-//        log.info("Deleting pix key: {}", id);
-//        PixKeyEntity pixKeyEntity = pixKeyRepository.findById(id).orElse(null);
-//
-//        validateNonNullAndExists(pixKeyEntity,id);
-//
-//        pixKeyEntity.setDateTimeDelete(LocalDateTime.now(ZoneId.of("America/Sao_Paulo")));
-//        pixKeyRepository.save(pixKeyEntity);
-//        log.info("Pix key deleted: {}", id);
-//        return new PixKeyDeleteOutDTO(pixKeyEntity);
-//
-//    }
-//
-//
 
-//
-//
-    private AccountPixKeysModel findByAccountAndAgency(BigInteger agencyNumber, BigInteger accountNumber) {
+    }
+
+    public PixKeyDeleteOutDTO deletePixKey(UUID id) {
+        log.info("Deleting pix key: {}", id);
+        PixKeyEntity pixKeyEntity = Optional.of(pixKeyRepository.findByIdAndDateTimeDeleteIsNull(id)).orElseThrow();
+
+        pixKeyEntity.setDateTimeDelete(LocalDateTime.now(ZoneId.of("America/Sao_Paulo")));
+        pixKeyRepository.save(pixKeyEntity);
+        log.info("Pix key deleted: {}", id);
+        return PixKeyMapper.INSTANCE.toPixKeyDeleteOutDTO(pixKeyEntity);
+    }
+
+    private List<PixKey> findByAccountAndAgency(BigInteger agencyNumber, BigInteger accountNumber) {
         List<PixKeyEntity> pixKeys = pixKeyRepository.findByAgencyNumberAndAccountNumber(agencyNumber, accountNumber);
 
-        if (pixKeys.isEmpty()) {
-            return null;
-        }
-        PixKeyEntity pixKey = pixKeys.get(0);
-
-        return AccountPixKeysModel.builder().accountNumber(pixKey.getAccountNumber())
-                .agencyNumber(pixKey.getAgencyNumber())
-                .personType(PersonTypeModel.valueOf(pixKey.getPersonTypeEntity().name()))
-                .pixKeys(pixKeys.stream()
-                        .map(pixKeyEntity -> PixKeyModel.builder()
-                                .keyType(KeyTypeModel.valueOf(pixKeyEntity.getKeyTypeEntity().name()))
-                                .keyValue(pixKeyEntity.getKeyValue())
-                                .build()).toList())
-                .build();
+        return pixKeys.stream().map(PixKeyMapper.INSTANCE::toPixKey).collect(Collectors.toList());
     }
 
-    private Map<String,String> convertTOMap (PixKeyQueryDTO pixKeyQueryDTO){
-        ObjectMapper objectMapper = new ObjectMapper();
-        objectMapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
-        Map<String, String> map = objectMapper
-                .convertValue(pixKeyQueryDTO, new TypeReference<Map<String, String>>() {});
 
-        return map;
+    private DateTimeFormatter getFormaterStart(){
+        return new DateTimeFormatterBuilder()
+                .appendPattern("dd/MM/yyyy").parseDefaulting(ChronoField.HOUR_OF_DAY, 0)
+                .parseDefaulting(ChronoField.MINUTE_OF_HOUR, 0)
+                .parseDefaulting(ChronoField.SECOND_OF_MINUTE, 0)
+                .toFormatter();
+    }
+
+
+    private DateTimeFormatter getFormaterEnd(){
+        return new DateTimeFormatterBuilder()
+                .appendPattern("dd/MM/yyyy").parseDefaulting(ChronoField.HOUR_OF_DAY, 23)
+                .parseDefaulting(ChronoField.MINUTE_OF_HOUR, 59)
+                .parseDefaulting(ChronoField.SECOND_OF_MINUTE, 59)
+                .toFormatter();
+    }
+
+    private LocalDateTime convertToLocalDate(String date,DateTimeFormatter formatter){
+        if(Objects.isNull(date)){
+            return null;
+        }
+
+        return LocalDateTime.parse(date,formatter);
     }
 
 }
